web-infras/parser/tests/fixtures/babel/core/uncategorised/389/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,7)
1|{ get 2 }
 |     ^
